--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "trailingComma": "all",
         "tabWidth": 4,
         "semi": false,
-        "singleQuote": true
+        "singleQuote": true,
+        "printWidth": 120
     }
 }
